--- a/src/components/SDGCard.css
+++ b/src/components/SDGCard.css
@@ -1,13 +1,14 @@
 
 .sdg-section-wrapper {
   margin-bottom: 60px; 
+  /* margin-top: 60px; */
 }
 
 .sdg-title-outside {
   font-size: 2.2em;
   color: #333;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
 }
 
 .sdg-section {
@@ -57,6 +58,7 @@
   align-items: center;
   max-width: 1000px;
   padding: 0 10px;
+  margin-top: 150px;
 }
 
 .top-row,
