--- a/src/components/Partners/PartnerCTA.css
+++ b/src/components/Partners/PartnerCTA.css
@@ -7,6 +7,7 @@
   color: #fff;
   flex-wrap: wrap;
   gap: 40px;
+  height: 100vh;
 }
 
 .partnercta-left {
@@ -101,7 +102,8 @@
 @media (max-width: 768px) {
   .partnercta-section {
     flex-direction: column;
-    padding: 60px 20px;
+    /* padding: 60px 20px; */
+    gap: 20px;
   }
 
   .typewriter-title {
