--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -94,6 +94,14 @@
 .get-in-touch:hover {
   background-color: #222;
 }
+.get-in-touch.disabled-contact {
+  background-color: #ccc;
+  color: #666 !important;
+  cursor: not-allowed !important;
+  pointer-events: none;
+  box-shadow: none;
+}
+
 
 /* Header for company pag */
 .white-header .logo,
@@ -102,10 +110,22 @@
   color: white;
 }
 
-/* 
-.white-header .hamburger .bar {
-  background-color: white;
-} */
+.nav-links .active-link {
+  position: relative;
+  font-weight: bold;
+}
+
+.nav-links .active-link::after {
+  content: "";
+  position: absolute;
+  bottom: -4px; 
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #B0F222; 
+  border-radius: 2px;
+}
+
 
 
 /* Mobile  */
