--- a/src/components/Partners/WhyCollaborate.css
+++ b/src/components/Partners/WhyCollaborate.css
@@ -34,7 +34,7 @@
 }
 
 .benefit-card {
-  background-image: url('../../assets/background-card.jpg'); 
+  background-image: url('https://pub-4cadfb4c0ebc41a9bdd57aa74b8bd719.r2.dev/background-card.jpg'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
