--- a/src/components/Impact.css
+++ b/src/components/Impact.css
@@ -18,7 +18,7 @@
   gap: 3rem;
   flex-wrap: wrap;
   margin-top: 2rem;
-  margin-left: 0; /* Reset for mobile */
+  margin-left: 0; 
 }
 
 .custom-legend {
@@ -50,6 +50,7 @@
   .impact-pie-section {
     padding-top: 2rem;
     margin-top: 0;
+    min-height: 50vh;
   }
 
   .impact-pie-section h2 {
@@ -57,13 +58,15 @@
   }
 
   .impact-chart-wrapper {
-    margin-top: 1rem;
+    margin-top: 2rem;
     flex-direction: column;
-    gap: 2rem;
+    display: flex;
+    gap: 4rem;
     transform: translateX(-45px);
+   
   }
-
-  .custom-legend {
-    display: none;
-  }
+.custom-legend{
+  display: none;
+}
+  
 }
