--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -60,11 +60,14 @@
 
   .who-text h2 {
     font-size: 2.2rem;
+    text-align: left;
   }
 
   .who-text p {
     font-size: 1rem;
     line-height: 1.6;
+    text-align: left;
+    /* margin: 0; */
   }
 
   .visual-box {
@@ -83,7 +86,7 @@
   .who-text p {
     font-size: 0.95rem;
     line-height: 1.6;
-    padding: 0 1rem;
+    padding: 0;
   }
 
   .visual-box {
