--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -87,7 +87,7 @@
 
   .contact-left h2 {
     font-size: 1.8rem;
-    text-align: center !important;
+    text-align: left !important;
     width: 100%;
   }
 
